--- a/10 - Siri Intents UI/Bike Taxi/BikeTaxiUIIntent/Base.lproj/MainInterface.storyboard
+++ b/10 - Siri Intents UI/Bike Taxi/BikeTaxiUIIntent/Base.lproj/MainInterface.storyboard
@@ -24,18 +24,15 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" image="rusty_bike" translatesAutoresizingMaskIntoConstraints="NO" id="cMK-4D-uKS">
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="65" id="tkU-Ah-17i"/>
-                                </constraints>
-                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" image="basic" translatesAutoresizingMaskIntoConstraints="NO" id="cMK-4D-uKS"/>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="cMK-4D-uKS" firstAttribute="centerY" secondItem="zMn-AG-sqS" secondAttribute="centerY" id="8i6-TJ-sSd"/>
+                            <constraint firstItem="cMK-4D-uKS" firstAttribute="top" secondItem="zMn-AG-sqS" secondAttribute="top" id="6q9-qF-wh2"/>
+                            <constraint firstAttribute="trailing" secondItem="cMK-4D-uKS" secondAttribute="trailing" id="ADK-z9-bFw"/>
+                            <constraint firstItem="cMK-4D-uKS" firstAttribute="leading" secondItem="zMn-AG-sqS" secondAttribute="leading" id="HSs-QY-j7L"/>
+                            <constraint firstAttribute="bottom" secondItem="cMK-4D-uKS" secondAttribute="bottom" id="VCs-WK-Ajy"/>
                             <constraint firstItem="9Hy-47-XG2" firstAttribute="centerY" secondItem="zMn-AG-sqS" secondAttribute="centerY" id="a8M-fp-Xfy"/>
-                            <constraint firstAttribute="leadingMargin" secondItem="cMK-4D-uKS" secondAttribute="leading" id="jj6-aM-vhU"/>
-                            <constraint firstItem="9Hy-47-XG2" firstAttribute="leading" secondItem="cMK-4D-uKS" secondAttribute="trailing" constant="16" id="ryA-xv-JKX"/>
                             <constraint firstItem="9Hy-47-XG2" firstAttribute="trailing" secondItem="zMn-AG-sqS" secondAttribute="trailingMargin" id="zam-LV-50W"/>
                         </constraints>
                     </view>
@@ -48,6 +45,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="rusty_bike" width="178" height="240"/>
+        <image name="basic" width="474" height="640"/>
     </resources>
 </document>
